--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "grunt": "~0.4.1"
   },
   "dependencies": {
-    "fs-util": "0.3.7",
+    "fs-util": "~0.3.17",
     "uglify-js": "~2.4.3",
     "coffee-script": "~1.6.3"
   },
