--- a/package.json
+++ b/package.json
@@ -35,18 +35,18 @@
     }
   },
   "devDependencies": {
-    "chai": "~1.8.0",
-    "fs-extra": "~0.8.1",
-    "grunt-coffeelint": "~0.0.7",
-    "grunt-contrib-coffee": "~0.7.0",
-    "grunt-mocha-cov": "0.0.7",
-    "grunt-bumper": "~1.0.0",
-    "grunt": "~0.4.1"
+    "chai": "~1.9",
+    "fs-extra": "~0.8",
+    "grunt-coffeelint": "~0.0",
+    "grunt-contrib-coffee": "~0.10",
+    "grunt-mocha-cov": "~0.2",
+    "grunt-bumper": "~1.0",
+    "grunt": "~0.4"
   },
   "dependencies": {
-    "fs-util": "~0.3.17",
-    "uglify-js": "~2.4.3",
-    "coffee-script": "~1.6.3"
+    "fs-util": "~0.3",
+    "uglify-js": "~2.4",
+    "coffee-script": "~1.6"
   },
   "keywords": [
     "coffeescript",
