--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
       "url": "https://github.com/weareinteractive/coffee-toaster-api/blob/master/LICENSE-MIT"
     }
   ],
-  "main": "./lib/toaster",
+  "main": "lib/toaster",
   "engines": {
     "node": ">=0.8.0"
   },
